Adding MacOS version for 10.6